2008-12-23  Willem Broekema <metawilm@gmail.com>

	* slime.el (sldb-insert-restarts): Make the space before each
	restart also propertized, consistent with how each line in the
	backtrace is fully sensitive.

2008-12-09  Helmut Eller  <heller@common-lisp.net>

	Reset the stream column to 0 after eval requests.

	* swank.lisp (interactive-eval, eval-region): Use FRESH-LINE
	to reset the stream column.
	* slime.el (test repl-test): Adjust test accordingly.

2008-12-09  Helmut Eller  <heller@common-lisp.net>

	Be a bit more careful when computing the toplevel restart.

	* swank.lisp (throw-to-toplevel): Test *sldb-quit-restart* for
	nilness.
	* sldb-quit (sldb-quit): Show the returned value in brackets.

2008-12-09  Helmut Eller  <heller@common-lisp.net>

	Make the modeline a bit shorter.

	* slime.el (slime-compute-modeline-string): Remove PKG: and CON:
	to save space.
	(slime-compute-modeline-connection-state): Don't include zeros.

2008-12-09  David Reitter <david.reitter@gmail.com>

	* slime.el (slime-repl-mode): Use `run-mode-hooks' rather than
	just `run-hooks'.  That way, after-change-major-mode-hook is
	called automatically.

2008-12-07  Nikodemus Siivola <nikodemus@random-state.net>

	* slime.el (slime-qualify-cl-symbol-name): Clean up the package
	name using `slime-pretty-package-name', so that packages named with
	strings are not left with the extra doublequotes.

2008-12-05  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-macroexpansion-minor-mode-map): Bind keybindings
	of `undo' to `slime-macroexpansion-undo'.
	(slime-show-macroexpansion): Renamed to
	`slime-initialize-macroexpansion-buffer'
	(slime-initialize-macroexpansion-buffer): Make sure that the user
	can't undo past the initial insertion.
	(slime-macroexpand-undo): New function. Tries to undo-only.

2008-12-05  Tobias C. Rittweiler  <tcr@freebits.de>

	* slime.el (slime-trace-query): SPEC argument can be a symbol.

2008-12-02  Tobias C. Rittweiler  <tcr@freebits.de>
